# IronEye

./: .connect_history.txt  .gitignore  .ldap_query_history.txt  .spray_history.txt  .userenum_history.txt  CODE_QUALITY_IMPROVEMENTS.md  Cargo.toml  LICENSE  README.md  acl_domainuser.txt  darth.vader.pfx  domain_groups_20250118_004206.txt  found_credentials_20250120_182228.txt  found_credentials_20250124_205709.txt  ironeye_history.db  ldap_query_objectClassuseruserA_20251028_175143.txt  passwords.txt  proxychains.conf  pubkey.der  results.txt  sample_krb.conf  shadow_creds.pfx  spns.txt  test_pool.txt  tywin.lannister.ccache  tywin.lannister.krb  users.txt  users_lab.txt
history/: mod.rs
lib/cerbero_lib/: .gitignore  Cargo.toml  README.md
lib/cerbero_lib/src/: error.rs  lib.rs  main.rs
lib/cerbero_lib/src/args/: ask.rs  asreproast.rs  brute.rs  convert.rs  craft.rs  dump.rs  hash.rs  kerberoast.rs  list.rs  mod.rs  validators.rs
lib/cerbero_lib/src/commands/: dump.rs  list.rs  mod.rs
lib/cerbero_lib/src/commands/ask/: ask_tgs.rs  ask_tgt.rs  mod.rs
lib/cerbero_lib/src/commands/asreproast/: mod.rs
lib/cerbero_lib/src/commands/brute/: mod.rs
lib/cerbero_lib/src/commands/kerberoast/: mod.rs
lib/cerbero_lib/src/communication/: channel_trait.rs  mod.rs  tcp_channel.rs  udp_channel.rs
lib/cerbero_lib/src/core/: cipher.rs  mod.rs  provider.rs  ticket_cred.rs
lib/cerbero_lib/src/core/forge/: build_req.rs  kdc_req.rs  krb_user.rs  mod.rs
lib/cerbero_lib/src/core/requesters/: request_tgt.rs  senders.rs
lib/cerbero_lib/src/core/vault/: lsa.rs  mod.rs
lib/cerbero_lib/src/dump/: keytab.rs  lsa.rs  mod.rs  session.rs  time.rs
lib/cerbero_lib/src/windows/: attack.rs  error.rs  lsa.rs  mod.rs  process.rs  time.rs  token.rs
output_20251028/: ironeye_computers_export.txt  ironeye_delegations_export.txt  ironeye_domain_groups_export.txt  ironeye_organizational_units.txt  ironeye_users_export.txt
output_20251029/: ironeye_delegations_export.txt  ironeye_domain_groups_export.txt  ironeye_trusts_export.txt  ironeye_users_export.txt
src/: args.rs  bofhound.rs  commands.rs  completion.rs  debug.rs  file_utils.rs  gettgt.rs  help.rs  ldap.rs  ldapping.rs  lib.rs  macros.rs  main.rs  proxy.rs  spinner.rs  spray.rs  utils.rs
src/Commands/: GetPwdPolicy.rs  customldap.rs  daclenum.rs  getmachinequota.rs  getpasspol.rs  getspns.rs  groups.rs  maq.rs  mod.rs  net.rs  securitydescriptor.rs
src/CommandsFolder/: GetPwdPolicy.rs  mod.rs  net.rs
src/Deep_Queries/: mod.rs  sccm.rs  trusts.rs  users.rs
src/Kerberos/: mod.rs
src/acl/: guid_mappings.rs  mod.rs  parser.rs  structures.rs
src/commands/: actions.rs  ad_utils.rs  add_computer.rs  add_user.rs  add_user_to_group.rs  customldap.rs  daclenum.rs  del_computer.rs  del_object.rs  del_user.rs  del_user_from_group.rs  disable_account.rs  enable_account.rs  from_sid_guid.rs  get_acedacl.rs  get_dcs.rs  get_sid_guid.rs  getpasspol.rs  getspns.rs  groups.rs  kerberoast.rs  ldap_utils.rs  maq.rs  mod.rs  net.rs  set_dacl.rs  set_dontreqpreauth.rs  set_owner.rs  set_password.rs  set_rbcd.rs  set_spn.rs  set_uac.rs  whoami.rs
src/commands/adidns/: mod.rs  operations.rs  serial.rs  structures.rs  zones.rs
src/commands/shadow_creds/: builder.rs  mod.rs  parser.rs  (+1 more)
src/deep_queries/: computers.rs  delegations.rs  dnsdump.rs  fileshares.rs  full_collection.rs  gpo.rs  groups.rs  hunt_fileshares.rs  hunt_sql.rs  mod.rs  ou.rs  pki.rs  sccm.rs  scom.rs  scp.rs  subnets.rs  trusts.rs  users.rs
src/history/: mod.rs
src/kerberos/: cerberos.rs  convert.rs  craft.rs  env.rs  hash.rs  kerberoast.rs  kerbtool.rs  krb5conf.rs  mod.rs  operations.rs  proxy_config.rs
(+12 files in other folders)
