[package]
name = "ironeye"
version = "0.2.0"
edition = "2021"

[dependencies]
dialoguer = "0.10"
clap = { version = "4.3", features = ["derive"] }
chrono = "0.4"
ldap3 = "0.11"
rustyline = "11.0.0"
base64 = "0.21" 
hex = "0.4" 
lazy_static = "1.4.0"
rand = "0.8"
url = "2.5.0"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
x509-parser = "0.12"
krb5-sys = "0.3.0"