[package]
name = "cerbero_lib"
description = "Kerberos protocol library - converted from cerbero CLI tool"
version = "0.0.22"
authors = ["Eloy <zer1t0ps@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/Zer1t0/cerbero"
readme = "README.md"

[lib]
name = "cerbero_lib"
path = "src/lib.rs"

[[bin]]
name = "cerbero"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "stderrlog"]

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"], optional = true }
kerbeiros = "0.2"
kerberos_asn1 = "0.2"
kerberos_constants = "0.0"
kerberos_crypto = "0.3"
kerberos_ccache = "0.0"
kerberos_keytab = "0.0"

ms_pac = "0.0"
ms_dtyp = "0.0"
ms_samr = "0.0"

chrono = "0.4"
rand = "0.6"
trust-dns-resolver = "0.20"
log = "0.4"
stderrlog = { version = "0.4", optional = true }
gethostname = "1.0.2"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization",
    "Win32_Security_Credentials",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
]
